Update Valhalla build, not compatible with maven reproducible build (yet)